# ante

./: Cargo.toml
.github/workflows/: mayhem.yml
examples/codegen/: effect_count.an  effects.an  iter.an
examples/parsing/: trait_decl.an
examples/refinements/: alias.an  basic_polymorphism.an  function.an  id.an  match.an  nonboolean_refinement.an  pattern_basic.an  pattern_basic_fail.an  pattern_parameter.an  recursion.an  simple.an  unreachable.an  unreachable_hard.an
examples/typechecking/: bind.an  extern.an  functor_and_monad.an  impl.an  instantiation.an  member_access.an  type_annotations.an
failing_examples/: advent.an  b.an  d.an  extern.an  nested.an  q.an  rf.an  t.an  traittest.an  u.an
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_start_time.rs
mayhem/: Dockerfile  Mayhemfile
src/: main.rs
src/cache/: mod.rs
src/cranelift_backend/: builtin.rs  context.rs  decisiontree.rs  mod.rs  module.rs
src/effects/: cps.rs  mod.rs  redex.rs
src/hir/: handler.rs  mod.rs  monomorphisation.rs
src/lexer/: token.rs
src/lifetimes/: allocationcount.rs  mod.rs  refusageinfo.rs
src/llvm/: decisiontree.rs  mod.rs
src/nameresolution/: builtin.rs  mod.rs
src/parser/: ast.rs  combinators.rs  desugar.rs  mod.rs  pretty_printer.rs
src/refine/: context.rs  mod.rs  model_parser.rs  refinements.rs  z3.rs
src/refinements/: context.rs  mod.rs  model_parser.rs  types.rs  z3.rs
src/types/: mod.rs  mutual_recursion.rs  pattern.rs  refinement.rs  traitchecker.rs  traits.rs  typechecker.rs  typed.rs  (+1 more)
stdlib/: c.an  file.an  prelude.an  string.an  unsafe.an
(+1 files in other folders)
