[package]
name = "ante"
version = "0.1.1"
authors = ["Jake Fecher <jfecher11@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
colored = "1.9"
mimalloc = { version = "0.1.19", default-features = false }
difference = "2.0.0"
goldentests = "0.3.7"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }
dirs = "3.0"
z3 = { path = "/home/rndmprsn/Code/Rust/z3.rs/z3" }
# "0.10.0"

[build-dependencies]
dirs = "3.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true

[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "link-arg=fuse-ld=lld",
]
