[package]
name = "ante-fuzz"
version = "0.0.0"
edition = "2018"

[package.metadata]
cargo-fuzz = true


[dependencies]
ante = { path = ".." }
honggfuzz = "0.5.55"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"], optional = true }


# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_start_time"
path = "fuzz_targets/fuzz_start_time.rs"
